--- a/business.css
+++ b/business.css
@@ -1,8 +1,6 @@
 body{
     background-color: #0a0c1b;
-    
 }
-
 .div1{
     background-color: #1c1938;
     display: flex;
@@ -10,7 +8,11 @@ body{
     height: 26rem;
     width: 70%;
     margin-left: 15%;
-
+    border-radius: 0.5em 0.5em 0.5em 0.5em;
+}
+.div4{ display: none;
+    width: 100%;
+    height: 26rem;
 }
 .div2{
     padding-left: 10%;
@@ -23,12 +25,21 @@ body{
     width: 50%;
     height: 26rem;
 }
-#image{
+
+#image1{
+    display: none;
     width: 90%;
     height: 26rem;
     margin-left: 10%;
 }
-.cover{
+#image2{
+    width: 90%;
+    height: 26rem;
+    margin-left: 10%;
+    border-radius: 0 0.5em 0.5em 0;
+}
+.cover1{
+    display: none;
     position: absolute;
     background-color: #a232f1;
     width: 90%;
@@ -36,11 +47,22 @@ body{
     margin-left: 10%;
     opacity: 50%;
 }
+.cover2{
+    position: absolute;
+    background-color: #a232f1;
+    width: 90%;
+    height: 26rem;
+    margin-left: 10%;
+    opacity: 50%;
+    border-radius: 0 0.5em 0.5em 0;
+}
 .insight{
+    max-width: 310px;
     color: white;
 }
 .note{
     color: white;
+    max-width: 350px;
 }
 #span{
     color: #a232f1;
@@ -51,5 +73,60 @@ body{
     color: white;
     padding-top: 10%;
 }
+.sub{
+    font-size: smaller;
+}
 
+@media screen and (max-width:600px)
+{
+    .div1{
+        border-radius: 1em 1em 1em 1em;
+        display: block;
+        margin-top: 10%;
+        height: 65rem;
+        width: 80%;
+        margin-left: 10%;
+        margin-bottom: 10%;
+    }
+    .div4{
+        display: block;
+        position: relative;
+    }
+    .cover1{
+        display: block;
+        border-radius: 1em 1em 0 0;
+        margin-left: 0;
+        width: 100%;
+    }
+    #image1{
+        border-radius: 1em 1em 0 0;
+        display: block;
+        width: 100%;
+        margin-left: 0;
+    }
+    .div2{
+        text-align: center;
+        width: 80%;
+    }
+    .insight{
+        white-space: pre-wrap;
+        max-width: 250px;
+        font-size:1.9rem;
+    }
+    .note{
+        max-width: 244px;
+    }
+    .div3{
+        display: none;
+    }
+    .cover2{
+        display: none;
+    }
+    #image{
+        display: none;
+    }
+    .bottom{
+        display: block;
+    }
 
+}
